tests/NormalTests/paczka1/small_fuzzy/98867696.err
Error in line 1: QeoNB S112 97,8
Error in line 9: PFQ S66 96,4
Error in line 3: QeoNB S66 28,4
Error in line 6: ZXf S112 78,2
